help Sonar make smarter suggestions (#499)
* chore(sonar): simplify NOSONAR comments and add explanations for SQL formatting

- Remove specific rule IDs from NOSONAR comments where not needed
- Add explanatory comments for SQL String#formatted usage in JPA steps
- Suppress Sonar warnings on dynamic SQL statements in DatabaseCleaner and SpringJPASteps

Co-Authored-By: Warp <agent@warp.dev>

* chore(sonar): add explanations and suppress warnings for regex operations

* chore(sonar): replaceAll -> replace optimisation

* chore(sonar): fix TypeParser.defaultPackage encapsulation issue

* chore(sonar): remove wrong unnecessary cast Sonar warning

* chore(sonar): simplify Stream to List conversion

* chore(sonar): simplify Stream to List conversion & optimise String replace

* chore(sonar): allow method names with underscores for BDD steps

* chore(sonar): fix Guard.latestEvaluatedConditionResult encapsulation issue

* chore(sonar): Replace String.replaceAll with String.replace for literal patterns

* chore(sonar): Fix false positive assertion check on non-production code.

* chore(sonar): Allow hardcoded operator symbols in enum

* chore(sonar): fix remaining high-severity issues

* chore(sonar): fix misc warnings

* chore(sonar): fix misc warnings

* fix typos in comments

* trigger CI build

* trigger CI build

* trigger CI build

---------

Co-authored-by: Julien Jakubowski <julien.jakubowski@decathlon.com>
Co-authored-by: Julien Jakubowski <julien@jakubowski.fr>
Co-authored-by: Warp <agent@warp.dev>